k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: merch-store
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
      name: http
